# ppg

./: .gitignore  README.md
backend/: main.py  mistral_client.py  pyproject.toml
backend/api/: pitch.py
backend/tests/: __init__.py  test_generate.py
frontend/: package-lock.json  package.json
frontend/src/app/: PitchForm.tsx  page.tsx
frontend/src/lib/: api.ts
